prevent overlap with dismiss button show the dismiss button on the right notice rather than just the first

--- a/assets/css/less/admin/notification.less
+++ b/assets/css/less/admin/notification.less
@@ -87,6 +87,7 @@
 
 .wpbdp-snackbar {
 	width: 100%;
+	position: relative;
 	background-color: @text-color;
 	border-radius: 12px;
 	padding: 16px;
@@ -98,6 +99,9 @@
 	p, a {
 		margin: 0;
 		color: @white !important;
+	}
+	p {
+		margin-right: 10px;
 	}
 	button {
 		&::before {
@@ -125,5 +129,5 @@
 
 .keyframes( wpbdp-fade-in-out; {
 	2% { opacity: 1; }
-	98% { opacity: 1; }
+	100% { opacity: 1; }
 });
